[gd_scene load_steps=23 format=2]

[ext_resource path="res://Assets/Isometric City Pack/png/medium_building_green_left.png" type="Texture" id=1]
[ext_resource path="res://Assets/progres_under.png" type="Texture" id=2]
[ext_resource path="res://Assets/progres_fill_verd.png" type="Texture" id=3]
[ext_resource path="res://Assets/Isometric City Pack/png/people_b_down.png" type="Texture" id=4]
[ext_resource path="res://Assets/progres_over.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Client.gd" type="Script" id=6]
[ext_resource path="res://Fonts/Gugi-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Assets/sons/porta_cotxe.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/sons/diners.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/sons/alarma.mp3" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Apareixer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.03, 0.03 ), Vector2( 0.5, 0.5 ), Vector2( 0.3, 0.3 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Baixar_cotxe"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.05, 0.3 ), Vector2( 0.05, 0.1 ), Vector2( 1, 1 ), Vector2( 0.9, 0.9 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 10 ), Vector2( 0, -250 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.878431, 1, 0, 1 ), Color( 0.878431, 1, 0, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Preu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.972549, 1, 0, 0 ), Color( 0.972549, 1, 0, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Progres:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Persona:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Ubicacio:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Desapareixer"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ), Vector2( 0.25, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 0.270588 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -90 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Desplacar1"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -75, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Desplacar2"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -125, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Desplacar3"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -170, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Desplacar4"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -210, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "Perdre_partida"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Progres:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 7, 7 ), Vector2( 6, 6 ), Vector2( 400, 400 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Progres:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.1, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 22, -84 ), Vector2( -366.667, -580 ), Vector2( -313.333, -513.333 ), Vector2( -24753.3, -26273.3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Ubicacio:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.8, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Persona:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.8, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Poc_temps"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Progres:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ), Vector2( 1, 1 ), Vector2( 0.5, 0.5 ), Vector2( 0.25, 0.25 ), Vector2( 0.5, 0.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Progres:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 22, -84 ), Vector2( -6.66667, -113.333 ), Vector2( 22, -84 ), Vector2( 40, -66.6667 ), Vector2( 22, -84 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "Pujar_cotxe"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 0.2, 0.2 ), Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0.333333 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.3, 0.3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Preu:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.968627, 1, 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Progres:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Persona:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Ubicacio:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Progres:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.5, 0.5 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Progres:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 22, -84 ) ]
}

[sub_resource type="DynamicFont" id=11]
size = 48
font_data = ExtResource( 7 )

[node name="Client" type="Control"]
rect_scale = Vector2( 0.3, 0.3 )
script = ExtResource( 6 )

[node name="Ubicacio" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Persona" type="Sprite" parent="."]
position = Vector2( 34, 52 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="Progres" type="TextureProgress" parent="."]
margin_left = 22.0
margin_top = -84.0
margin_right = 151.0
margin_bottom = 45.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 2 )
texture_over = ExtResource( 5 )
texture_progress = ExtResource( 3 )
fill_mode = 5

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Apareixer = SubResource( 1 )
anims/Baixar_cotxe = SubResource( 9 )
anims/Desapareixer = SubResource( 3 )
anims/Desplacar1 = SubResource( 4 )
anims/Desplacar2 = SubResource( 5 )
anims/Desplacar3 = SubResource( 6 )
anims/Desplacar4 = SubResource( 7 )
anims/Perdre_partida = SubResource( 10 )
anims/Poc_temps = SubResource( 12 )
anims/Pujar_cotxe = SubResource( 8 )
anims/RESET = SubResource( 2 )

[node name="Preu" type="Label" parent="."]
modulate = Color( 0.968627, 1, 0, 0 )
margin_left = -46.6667
margin_top = -26.6667
margin_right = -6.66666
margin_bottom = -12.6667
custom_fonts/font = SubResource( 11 )

[node name="Pujar_cotxe" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = 4.0
max_distance = 10000.0
attenuation = 1e-05

[node name="Guanyar_diners" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -12.0
max_distance = 10000.0
attenuation = 1e-05

[node name="Alarma" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -5.0
pitch_scale = 1.5
max_distance = 10000.0
attenuation = 1.26608

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
